# reynoldsflow

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements-solvers.txt  requirements.txt
.github/workflows/: tests.yml
benchmarks/: README.md  __init__.py  benchmark_evolution.py  benchmark_solver.py  benchmark_suite.py  cases.py  plot_solver_scaling.py
benchmarks/results/: cartesian-circle-2000-fluidpaper-2026-07-11.md  cartesian-circle-512-fluidpaper-2026-07-11.md  rough-contact-scaling-v0.1.0.csv
docs/: direct-solver-performance-diagnosis.md  performance-0.1.0.md  performance-0.1.1.md  test_solvers.md
docs/img/: README.md
docs/plans/: reynoldsflow-implementation-plan.md
src/reynoldsflow/: __init__.py  _active_dofs.py  _connectivity.py  _exceptions.py  _linear_solvers.py  _sparse.py  _validation.py  transport.py  transport_polar.py
tests/: analytical_test.py  conftest.py  test_evolution.py  test_solve.py  test_solvers.py
tests/integration/: test_optional_backends.py
tests/unit/: test_active_dofs.py  test_benchmark_solver.py  test_cartesian_flux.py  test_cartesian_periodic.py  test_connectivity.py  test_csr_assembly.py  test_linear_solvers.py  test_matrix_saving.py  test_package.py  test_polar_flux.py  test_prepared_problems.py  test_validation.py
