[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reynoldsflow"
version = "0.1.0"
requires-python = ">=3.10"
description = "Efficient finite-difference solver for the Reynolds equation in thin fluid films"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Vladislav A. Yastrebov", email = "vladislav.yastrebov@minesparis.psl.eu" }
]
keywords = [
  "Reynolds equation", "thin film", "fluid mechanics", "lubrication",
  "finite difference", "percolation", "sparse solver", "scientific computing"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.20.0",
  "scipy>=1.7.0",
  "numba>=0.56.0",
  "scikit-image>=0.19.0",
  "pyamg>=4.0.0",
  "matplotlib>=3.5.0",
  "rfgen>=0.1.0",
]

[project.optional-dependencies]
solvers = [
  "pypardiso",
  "petsc4py",
  "scikit-sparse",
]
dev = [
  "pytest>=7.0.0",
]
all = ["reynoldsflow[solvers,dev]"]

[project.urls]
Homepage = "https://github.com/vyastreb/reynoldsflow"
Repository = "https://github.com/vyastreb/reynoldsflow"
Issues = "https://github.com/vyastreb/reynoldsflow/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
markers = [
  "unit: fast deterministic tests using base dependencies",
  "integration: tests spanning multiple solver stages",
  "backend: tests requiring one or more optional linear-solver backends",
  "slow: large or repeated workloads excluded from the default test run",
  "benchmark: performance measurements excluded from the default test run",
]
